<resources>
    <string name="app_name">Calculator</string>
    <string name="sum_text">+</string>
    <string name="subtraction_text">-</string>
    <string name="multiplication_text">*</string>
    <string name="division_text">/</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="dot_text">.</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_3">3</string>
    <string name="text_0">0</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_equals">=</string>
    <string name="edt_calculos">0</string>
</resources>