<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="36"
    android:orientation="vertical"
    android:background="@color/secondaryLightColor"
    tools:context=".MainActivity">

   <EditText
       android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="4"
       android:layout_margin="@dimen/margin"
       android:padding="@dimen/padding"
       android:background="@drawable/contourn_visor"
       android:text="@string/edt_calculos"
       android:textDirection="rtl"/>

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="32">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="16">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/sum_text"
                style="@style/keyboard_view"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/text_7"
                style="@style/keyboard_view"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/text_4"
                style="@style/keyboard_view"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/text_1"
                style="@style/keyboard_view"/>

        </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:orientation="vertical"
           android:layout_weight="16">
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="4"
               android:text="@string/subtraction_text"
               style="@style/keyboard_view"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="4"
               android:text="@string/text_8"
               style="@style/keyboard_view"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="4"
               android:text="@string/text_5"
               style="@style/keyboard_view"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="4"
               android:text="@string/text_2"
               style="@style/keyboard_view"/>

       </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:orientation="vertical"
           android:layout_weight="16">
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="4"
               android:text="@string/multiplication_text"
               style="@style/keyboard_view"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="4"
               android:text="@string/text_9"
               style="@style/keyboard_view"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="4"
               android:text="@string/text_6"
               style="@style/keyboard_view"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="4"
               android:text="@string/text_3"
               style="@style/keyboard_view"/>

       </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="fill_parent"
           android:orientation="vertical"
           android:layout_weight="16">
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="4"
               android:text="@string/division_text"
               style="@style/keyboard_view"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="4"
               android:text="@string/text_equals"
               style="@style/keyboard_view"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="8"
               android:text="@string/text_0"
               style="@style/keyboard_view"/>

       </LinearLayout>
    </LinearLayout>
</LinearLayout>